Renamed to Itsaverse. Added controls for service via settings activity and ongoing notification.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Annoverse</string>
+    <string name="app_name">Itsaverse</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="settings_intro">Itsaverse: Take a Screenshot!</string>
+    <string name="settings_turn_off">Turn Off</string>
+    <string name="ongoing_notification_title">Itsaverse</string>
+    <string name="ongoing_notification_desc">Waiting for screen shots to scan</string>
+    <string name="ongoing_notification_turn_off">Turn Off</string>
+    <string name="settings_turn_on">Turn On</string>
 
 </resources>
