--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Itsaverse</string>
+    <string name="app_name">Geoffrey</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="settings_intro">Itsaverse: Take a Screenshot!</string>
+    <string name="settings_intro">Geoffrey: Take a Screenshot!</string>
     <string name="settings_turn_off">Turn Off</string>
-    <string name="ongoing_notification_title">Itsaverse</string>
+    <string name="ongoing_notification_title">Geoffrey</string>
     <string name="ongoing_notification_desc">Waiting for screenshots to scan</string>
     <string name="ongoing_notification_turn_off">Turn Off</string>
     <string name="settings_turn_on">Turn On</string>
